# dio-website

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  create_superuser.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
about_company/: models.py
about_company/migrations/: 0001_initial.py  0002_alter_aboutpage_content.py  0003_aboutpage_indicators.py  0004_move_indicators_and_work_stages.py  0005_alter_aboutpage_content.py  0006_alter_aboutpage_indicators.py  0007_sync_moved_content_revisions.py  0008_alter_aboutpage_content.py
about_company/static/about_company/css/: about_page.css
about_company/templates/about_company/: about_page.html
about_company/templates/about_company/sections/: certificates.html  features.html  partners.html  statistics.html  (+4 more)
base/: admin.py  forms.py  models.py  page_blocks.py  tests.py  views.py
base/management/commands/: bootstrap_site.py  ensure_superuser.py
base/migrations/: 0001_initial.py  0002_consultationrequest_contactsettings.py  0003_footersettings.py  0004_remove_contactsettings_privacy_policy_text_and_more.py  0005_alter_headersettings_nav_items.py  0006_subscriber.py  0007_subscriber_confirm_token_alter_subscriber_email.py
base/static/css/: light-theme.css
base/templates/: base.html
base/templates/base/: contact.html  footer.html  header.html
base/templates/components/: pagination.html  streamfield_block.html
base/templatetags/: mega_menu.py
cases/: models.py
cases/migrations/: 0001_initial.py  0002_alter_singlecasepage_content.py  0003_caseindustry_alter_singlecasepage_industry.py  0004_alter_singlecasepage_content.py
cases/templates/cases/: case_index_page.html  single_case_page.html
contacts/: models.py
contacts/migrations/: 0001_initial.py  0002_alter_contactpage_content.py
contacts/templates/contacts/: contact_page.html
dio_website/: asgi.py  settings.py  urls.py  wsgi.py
dio_website/settings/: base.py  dev.py  production.py
home/: models.py
home/migrations/: 0001_initial.py  0002_alter_homepage_options_homepage_achievements_and_more.py  0003_alter_homepage_hero.py  0004_homepage_hero_features_alter_homepage_hero.py  0005_alter_homepage_achievements.py  0006_alter_homepage_hero_features_herofeaturepage.py  0007_herofeatureindexpage_alter_homepage_hero_features.py  0008_workstageindexpage_workstagepage.py  0009_homepage_work_stages.py  0010_remove_homepage_achievements.py  0011_alter_homepage_hero_features.py  0012_alter_herofeaturepage_content_and_more.py  0013_homepage_directions.py  0014_homepage_service_1c_actions_and_more.py  0015_rename_work_homepage_work_with_and_more.py
home/templates/: cases_section.html  global_presence_section.html  services_section.html  statistics_section.html  work_stages_section.html  work_with_section.html
home/templates/home/: content_detail_page.html  hero_feature_page.html  home_page.html  work_stage_page.html
home/templates/sections/: cases_section.html  direction_section.html  products_section.html  service1C_action_section.html  services_section.html  work_stages_section.html  work_with_section.html
nginx/: default.conf
practice/: apps.py  models.py
practice/migrations/: 0001_initial.py  0002_alter_practicesinglepage_content.py
practice/templates/practice/: practice_index_page.html  practice_single_page.html
privacy/: models.py
privacy/migrations/: 0001_initial.py  0002_rename_privacypolicypage_legaldocumentpage_and_more.py  0003_alter_legaldocumentpage_content.py
privacy/templates/privacy/: document_page.html  privacy_page.html
products/: models.py
products/migrations/: 0001_initial.py  0002_alter_singleproductpage_content.py  0003_alter_productcategory_options_and_more.py  0004_alter_singleproductpage_content.py
products/templates/products/: product_index_page.html  single_product_page.html
services/: models.py
services/migrations/: 0001_initial.py  0002_alter_singleservicepage_content.py  0003_alter_singleservicepage_content.py  0004_servicecategory_alter_singleservicepage_content_and_more.py  0005_clear_legacy_category_revisions.py  0006_alter_singleservicepage_content.py  0007_alter_singleservicepage_content.py  0008_alter_singleservicepage_content.py
services/templates/services/: service_index_page.html  services_cards_styles.html  single_service_page.html
services_1C/: apps.py  models.py
services_1C/migrations/: 0001_initial.py  0002_alter_service1cindexpage_options_and_more.py  0003_service1ccategory_alter_singleservice1cpage_content_and_more.py  0004_alter_service1ccategory_options_and_more.py  0005_alter_singleservice1cpage_content.py
services_1C/templates/services_1C/: service_1C_index_page.html  single_service_1C_page.html
(+16 files in other folders)
