[project]
name = "dio-website-cms"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django-cors-headers>=4.8.0",
    "django-extensions>=4.1",
    "django-htmx>=1.26.0",
    "django-stubs[compatible-mypy]>=5.2.3",
    "django-tailwind>=4.2.0",
    "fuzzywuzzy>=0.18.0",
    "python-dotenv>=1.2.1",
    "python-levenshtein>=0.27.1",
    "psycopg[binary]>=3.2.0",
    "pytz>=2025.2",
    "wagtail>=7.1.1",
    "wagtail-modelchooser>=4.0.1",
    "wagtailmenus>=4.0.4",
    "whitenoise>=6.11.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.21.0",
    "docx2md>=1.0.4",
    "fastapi[all]>=0.116.1",
    "faststream>=0.6.2",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-elasticsearch>=0.3.2",
    "langchain-gigachat>=0.3.12",
    "langchain-huggingface>=0.3.1",
    "langchain-pinecone>=0.2.12",
    "langgraph>=0.6.7",
    "langgraph-checkpoint>=2.1.1",
    "langgraph-checkpoint-redis>=0.1.1",
    "mypy>=1.17.1",
    "pymupdf4llm>=0.0.27",
    "redis>=6.4.0",
    "redisvl>=0.8.2",
    "ruff>=0.12.12",
    "sentence-transformers>=5.1.0",
    "greenlet>=3.2.4",
]

[tool.ruff]
line-length = 99
preview = true
exclude = [
    "migrations",
    "migration",
    "src/migrations",
    "alembic.ini",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/.venv"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "UP",
    "YTT",
    "ASYNC",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "INT",
    "ARG",
    "TD",
    "FIX",
    "ERA",
    "PD",
    "PGH",
    "PL",
    "TRY",
    "FLY",
    "NPY",
    "AIR",
    "PERF",
    "FURB",
    "LOG",
    "RUF",
]
ignore = [
    "S105",
    "S101",
    "B008",
    "TRY201",
    "PLW3201",
    "N805",
    "PTH",
    "COM812",
    "ISC001",
    "TRY003",
    "PT013",
    "TID252",
    "RUF001",
    "RUF002",
    "RUF003",
    "ASYNC109",
]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "typings",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"typings" = ['typing']

[tool.ruff.lint.pylint]
max-args = 15
max-returns = 10
max-branches = 30

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
format_css = true
format_js = true

# -- MyPy --
[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
exclude = [
    "src/migration",
    "src/migrations",
    "__samples__",
    ".venv"
]

[tool.django-stubs]
django_settings_module = "dio_website.settings.dev"

# -- Vulture --
[tool.vulture]
exclude = [
    ".vscode/",
    "__samples__/",
    "tests",
    ".venv"
]
ignore_names = [
    "post",
    "put",
    "delete",
    "head"
]

[dependency-groups]
dev = [
    "djlint>=1.36.4",
]
