[project]
name = "dio-website-cms"
version = "0.1.0"
description = "DIO company website built with Django and Wagtail"
requires-python = ">=3.13"
dependencies = [
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.1",
    "psycopg[binary]>=3.2.0",
    "wagtail>=7.1.1",
    "wagtailmenus>=4.0.4",
    "whitenoise>=6.11.0",
]

[tool.ruff]
line-length = 99
exclude = [
    "**/migrations",
    "**/__pycache__",
    "**/.mypy_cache",
    "**/.ruff_cache",
    "**/.venv"
]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "C4",
    "PIE",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "RUF012",
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"dio_website/settings/*.py" = ["F403", "F405"]

[tool.ruff.lint.isort]
section-order = [
    "future",
    "typings",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
"typings" = ['typing']

[tool.ruff.lint.pylint]
max-args = 15
max-returns = 10
max-branches = 30

[tool.djlint]
profile = "django"
indent = 2
max_line_length = 120
format_css = true
format_js = true
ignore = "H006,T003"

# -- MyPy --
[tool.mypy]
plugins = ["mypy_django_plugin.main"]
ignore_missing_imports = true
exclude = [
    "src/migration",
    "src/migrations",
    "__samples__",
    ".venv"
]

[tool.django-stubs]
django_settings_module = "dio_website.settings.dev"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.2.3",
    "djlint>=1.36.4",
    "mypy>=1.17.1",
    "ruff>=0.12.12",
]
